[gd_scene load_steps=5 format=3 uid="uid://rr4h5k7gf55n"]

[ext_resource type="Script" path="res://scenes/UI/ui.gd" id="1_jym26"]
[ext_resource type="Theme" uid="uid://c40qggtdj17rp" path="res://themes/ui.tres" id="2_6aew3"]
[ext_resource type="Texture2D" uid="uid://dq44d1lqwbvwd" path="res://sprites/ui/health_progress_bar_void.png" id="2_k4trs"]
[ext_resource type="Texture2D" uid="uid://b5llyil1cv8jq" path="res://sprites/ui/health_progress_bar_full.png" id="3_m6a5i"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_jym26")

[node name="HBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -62.0
offset_top = -40.0
offset_right = 62.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 0

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureProgressBar" type="TextureProgressBar" parent="HBoxContainer/CenterContainer"]
modulate = Color(1, 1, 1, 0.784314)
layout_mode = 2
size_flags_horizontal = 0
value = 100.0
texture_under = ExtResource("2_k4trs")
texture_progress = ExtResource("3_m6a5i")

[node name="CenterContainer2" type="CenterContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/CenterContainer2"]
modulate = Color(1, 0, 0, 0.784314)
layout_mode = 2
theme = ExtResource("2_6aew3")
text = "300/300"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hint" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_6aew3")
text = "E чтобы сохраниться"
horizontal_alignment = 1

[node name="Message" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0
theme = ExtResource("2_6aew3")
text = "Сообщение для пользователя"

[node name="MessageLifeTimer" type="Timer" parent="Message"]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="Message/MessageLifeTimer" to="." method="_on_message_life_timer_timeout"]
